style.css
:root{
    --primary: #5B83A6;
    --secondary: #293959;
    --tertiary: #262626;
    --off-white: #F7F7F7;
}

html{
    font-size: 125%;
    color: var(--tertiary);
    background-color: var(--off-white);

    box-sizing: border-box;
}

body{
    /* Body elements default to have margins. No good for styling ;) */
    margin: 0;

    font-family: 'Source Sans Pro', sans-serif;

    line-height: 1.4;
    
}

header{
    font-family: 'Chakra Petch', sans-serif;
}

.top-header{

    margin: 0;

    /* View Height is a neato value! I want the image to take up most of your entire viewport, so instead of using %, vh makes the most sense */
    height: 75vh;
    background-image: url(img/kristoff-traintracks-unsplash-header.jpg);
    background-color: rgba(black, .2);
    background-position: center center;
    background-blend-mode: overlay;
    background-size: cover;
    position: relative;

    
    font-size: 1.75em;
    color: white;


    /* Creating the clipped v shape with the header image */
    /* Working with calc in CSS is so nice, helps remove a lot of guess work for breakpoints or other dynamic elements! */
    padding: 4em 1em calc(3em + 3.5vw);
    clip-path: polygon(
      0 0,
      100% 0,
      100% calc(100% - 3.5vw),
      50% 100%,
      0 calc(100% - 3.5vw)
    );
}

.welcome-message{
    margin: 0;
}

#greeting{

}

#sub-greeting{

}

#signed-greeting{

}

#main-container{
    display: block;
    margin-left: auto;
    margin-right: auto;
    padding: 1em;
    max-width: 50rem;
}

.flex-container{
    display: flex;
    flex-flow: row;
    justify-content: space-around;
    align-content: space-around;
}

@media all and (max-width: 600px) {
    .flex-container{
        flex-direction: column;
        justify-content: center;
    }
}

#headshot{
    max-width: 100%;
    padding: 1em;
}

.button{
    display: block;
    border: 4px solid var(--primary);
    border-radius: 0.2em;
    padding: 0.5em;
    text-align: center;
    text-decoration: none;
    color: var(--primary);
    font-family: 'Chakra Petch', sans-serif;
    text-transform: uppercase;
    font-size: 1.25em;
    font-weight: 900;
}

.button:hover{
    background-color: var(--primary);
    color: var(--off-white);    
}

.project-card{
    display: block;
    border: 4px solid var(--secondary);
}

.project-card.highlight{

}

.social-container{

}

footer{
    color: var(--off-white);
    background-color: var(--tertiary);
    text-align: center;
}

#sassy-aside{
    display: block;
    margin: 0;
}

